# turtlebot3_nav2_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: nav2_params.yaml
launch/: nav.launch.py  rviz.launch.py
maps/: map.pgm  map.yaml
rviz/: nav2_demo.rviz
scripts/: multi_goal_patrol.py
